--- a/source/index.html
+++ b/source/index.html
@@ -9,32 +9,32 @@
   <body>
     <header class="main-header">
       <div class="main-header__wrapper">
-      <a class="main-header__logo">
-        <img class="main-header__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Mishka">
-        <!-- src потом изменю -->
-      </a>
-      <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">Открыть меню</button>
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list nav-list">
-            <li class="nav-list__item">
-              <a class="nav-list__link" href="catalog.html">Каталог товаров</a>
-            </li>
-            <li class="nav-list__item">
-              <a class="nav-list__link" href="form.html">Вязание на заказ</a>
-            </li>
-          </ul>
-          <ul class="main-nav__list user-list">
-            <li class="user-list__item user-list__item--search-tablet">
-              <a class="user-list__link" href="#">Поиск по сайту</a>
-            </li>
-            <li class="user-list__item user-list__item--cart-tablet">
-              <a class="user-list__link" href="#">Корзина: пока пуста</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </div>
+        <a class="main-header__logo">
+          <img class="main-header__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Mishka">
+          <!-- src потом изменю -->
+        </a>
+        <nav class="main-nav">
+          <button class="main-nav__toggle" type="button">Открыть меню</button>
+          <div class="main-nav__wrapper">
+            <ul class="main-nav__list nav-list">
+              <li class="nav-list__item">
+                <a class="nav-list__link" href="catalog.html">Каталог товаров</a>
+              </li>
+              <li class="nav-list__item">
+                <a class="nav-list__link" href="form.html">Вязание на заказ</a>
+              </li>
+            </ul>
+            <ul class="main-nav__list user-list">
+              <li class="user-list__item user-list__item--search-tablet">
+                <a class="user-list__link" href="#">Поиск по сайту</a>
+              </li>
+              <li class="user-list__item user-list__item--cart-tablet">
+                <a class="user-list__link" href="#">Корзина: пока пуста</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
     </header>
     <main class="page-main">
       <div class="page-main__wrapper">
@@ -48,7 +48,7 @@
             <section class="products">
               <h2 class="products__title">Вязаные корзинки</h2>
               <b class="products__hit">Товар недели</b>
-              <div class="products__wrap--tablet">
+              <div class="products__wrapper">
                 <p class="products__description"> Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
                 <table class="products__data">
                   <tr>
@@ -85,25 +85,20 @@
               <blockquote class="comments__item">
                 <!-- Про три отзыва не очень поняла?! - в макете всегод один отзыв ... еще раз пересмотрела макет и нет скрытых отзывов ?! по логике конечно здесь будет несколько отзывов поэтому я добавила секции еще общий класс slider-->
                 <p class="comments__content">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
-                <div class="comments__wrap--tablet">
-                  <div class="comments__author--wrap-tablet">
-                    <p class="comments__author">Анастасия Красильникова</p> <!-- cite -->
-                    <p class="comments__author-link">@misssssiskras</p>
-                  </div>
-                  <p class="comments__toggles slider__toggles">
-                    <button class="slider__prev" type="button">Предыдущий отзыв</button>
-                    <button class="slider__next" type="button">Следующий отзыв</button>
-                  </p>
-                </div>
+                <p class="comments__author">Анастасия Красильникова</p> <!-- cite -->
+                <p class="comments__author-link">@misssssiskras</p>
               </blockquote>
+              <p class="comments__toggles slider__toggles">
+                <button class="comments-toggle slider__prev" type="button">Предыдущий отзыв</button>
+                <button class="comments-toggle slider__next" type="button">Следующий отзыв</button>
+              </p>
               <a class="comments__add-comment button" href="#">Написать</a>
             </section>
           </div>
         </main>
         <footer class="page-footer">
-
-            <section class="contacts">
-              <div class="contacts__wrapper">
+          <section class="contacts">
+            <div class="contacts__wrapper">
               <h2 class="contacts__title">Контакты</h2>
               <table class="contacts__data">
                 <tr>
@@ -123,15 +118,14 @@
                   <td class="data__value">г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</td>
                 </tr>
               </table>
-              </div>
-              <div class="contacts__map-wrap">
+            </div>
+            <div class="contacts__map-wrapper">
               <img class="contacts__map" src="#" width="322" height="457" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
               <a class="contacts__write-us button" href="#">Напишите нам</a>
             </div>
-
           </section>
-          <div class="footer__wrap">
-            <div class="footer__wrap--tablet">
+          <section class="social-copyright">
+            <div class="social-copyright__wrapper">
               <div class="social">
                 <ul class="social__list">
                   <li class="social__item">
@@ -150,7 +144,7 @@
                 <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
               </div>
             </div>
-          </div>
+          </section>
         </footer>
         <section class="modal">
           <form class="modal__form" action="https://echo.htmlacademy.ru" method="get">
